--- a/index.html
+++ b/index.html
@@ -1,24 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="/.assets/css/style.css">
-<title>Weather Forecast</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Enter your description here" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Weather Forecast</title>
+  </head>
+  <body>
     <header>
-        
+      <h1>Weather Forecast of the day!</h1>
+      <p class="location"></p>
     </header>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-<script src="./assets/script/script.js"></script>
+    <div class="main">
+      <div class="side-panel">
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            id="location-input"
+            placeholder="Lookup for Location"
+            aria-label="Lookup for Location"
+            aria-describedby="basic-addon2"
+          />
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" id="lookup-weather" onclick="weatherCityName()" type="button">
+              Search
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+          <div class="container-fluid current-weather">
+              <div id="location-name"></div>
+              <div id="current-day"></div>
+              <div id="weather-pic"></div>
+              <div id="humidity"></div>
+              <div id="wind-speed"></div>
+              <div id="uv-index"></div>
+          </div>
 
-</body>
+          <div class="location future-weather"></div>
+      </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+    <script src="./assets/script/script.js"></script>
+  </body>
 </html>
