updated script for wind and humidity

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
               <div id="current-day"></div>
               <div id="weather-pic"></div>
               <div id="humidity"></div>
-              <div id="wind-speed"></div>
+              <div id="wind-container">
+                  <div id="speed"></div>
+                  <div id="gust"></div>
+                  <div id="deg"></div>
+              </div>
               <div id="uv-index"></div>
           </div>
 
