updates for current weather

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="current-weather">
+        <div class="current-weather" id="weather-card">
           <div class="card">
             <div class="card-header d-flex justify-content-between">
               <div id="location-name"></div>
@@ -75,6 +75,8 @@
                   <div id="humidity"></div>
                   <div id="wind-speed"></div>
                   <div id="uv-index"></div>
+                  <div id="latitude">Latitude: </div>
+                  <div id="longitude">Longitude: </div>
                 </div>
               </div>
             </div>
