--- a/index.html
+++ b/index.html
@@ -12,87 +12,89 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Forecast</title>
   </head>
   <body>
     <header class="container">
-      <h1>Weather Forecast of the day!</h1>
-      <p class="location"></p>
+      <h1>Weather Forecast</h1>
     </header>
 
     <div class="main">
-      <div class="container">
-        <div class="search-panel">
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              id="location-input"
-              placeholder="Lookup for Location"
-              aria-label="Lookup for Location"
-              aria-describedby="basic-addon2"
-            />
-            <div class="input-group-append">
-              <button
-                class="btn btn-outline-secondary"
-                id="lookup-weather"
-                onclick="weatherCityName()"
-                type="button"
-              >
-                Search
-              </button>
+      <div class="container d-flex">
+        <div class="left-panel">
+          <div class="search-panel">
+            <div class="input-group mb-3">
+              <input
+                type="text"
+                class="form-control"
+                id="location-input"
+                placeholder="Lookup for Location"
+                aria-label="Lookup for Location"
+                aria-describedby="basic-addon2"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary"
+                  id="lookup-weather"
+                  onclick="weatherCityName()"
+                  type="button"
+                >
+                  Search
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="current-weather" id="weather-card">
-          <div class="card">
-            <div class="card-header d-flex justify-content-between">
-              <div id="location-name"></div>
-              <div id="current-day"></div>
-            </div>
+          <div class="current-weather" id="weather-card">
+            <div class="card">
+              <div class="card-header d-flex justify-content-between">
+                <div id="location-name"></div>
+                <div id="current-day"></div>
+              </div>
 
-            <div class="card-body">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <div class="temp-icon">
-                    <div class="d-flex">
-                      <div class="flex-shrink-0">
-                        <img id="weather-icon" />
-                      </div>
-                      <div class="flex-grow-1 ms-3">
-                        <div id="temperature"></div>
-                        <div id="weather-desc"></div>
+              <div class="card-body">
+                <div class="d-flex">
+                  <div class="flex-shrink-0">
+                    <div class="temp-icon">
+                      <div class="d-flex">
+                        <div class="flex-shrink-0">
+                          <img id="weather-icon" />
+                        </div>
+                        <div class="flex-grow-1 ms-3">
+                          <div id="temperature"></div>
+                          <div id="weather-desc"></div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="flex-grow-1 ms-3 p-4">
-                  <div id="humidity"></div>
-                  <div id="wind-speed"></div>
-                  <div id="uv-index"></div>
+                  <div class="flex-grow-1 ms-3 p-4">
+                    <div id="humidity"></div>
+                    <div id="wind-speed"></div>
+                    <div id="uv-index"></div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="future-weather">
-          <h4>5-Day Forecast</h4>
-          <div class="row">
-            <div class="col-2 card" id="nextday1"></div>
-            <div class="col-2 card ml-1" id="nextday2"></div>
-            <div class="col-2 card ml-1" id="nextday3"></div>
-            <div class="col-2 card ml-1" id="nextday4"></div>
-            <div class="col-2 card ml-1" id="nextday5"></div>
+          <div class="future-weather">
+            <h4>5-Day Forecast</h4>
+            <div class="row">
+              <div class="col-2 card" id="nextday1"></div>
+              <div class="col-2 card ml-1" id="nextday2"></div>
+              <div class="col-2 card ml-1" id="nextday3"></div>
+              <div class="col-2 card ml-1" id="nextday4"></div>
+              <div class="col-2 card ml-1" id="nextday5"></div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container prev-search">
-          <h2>Search history</h2>
+        <div class="right-panel">
+          <div class="prev-search card mt-5">
+            <div class="card-header"><h3>Search History</h3></div>
+            <div class="card-body">
+              <div class="shistory-item"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
