updated UI design

--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
     <title>Weather Forecast</title>
   </head>
   <body>
-    <header class="container">
-      <h1>Weather Forecast</h1>
+    <header>
+      <nav class="navbar navbar-light bg-light">
+        <span class="navbar-brand d-inline-block mb-0">
+          <img
+            src="assets/images/weather-icon.png"
+            width="50"
+            class=" align-top mr-2"
+            alt=""
+          />
+          <span class="h1">Weather Forecast</span>
+        </span>
+      </nav>
     </header>
 
-    <div class="main">
+    <div class="main mt-4">
       <div class="container d-flex">
         <div class="left-panel">
           <div class="search-panel">
