updated UI design

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar navbar-light bg-info">
         <span class="navbar-brand d-inline-block mb-0">
           <img
             src="assets/images/weather-icon.png"
